# gpucast

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.hpp.in
examples/: CMakeLists.txt
examples/atomic_counter/: CMakeLists.txt  atomic_counter.cpp
examples/gl_atomic_counter/: CMakeLists.txt  atomic_counter.cpp
examples/gl_cubemap/: CMakeLists.txt  cubemap.cpp
examples/gl_cuda_interop/: CMakeLists.txt  cuda_helper.hpp  cuda_interop.cpp  cuda_interop.hpp  helper_string.hpp  squares.cu
examples/gl_deferred_shading/: deferred_shading.cpp  first_pass.vert  second_pass.frag  second_pass.vert
examples/gl_fbo/: CMakeLists.txt  fbo.cpp
examples/gl_fileloader/: CMakeLists.txt  fileloader.cpp  phong.frag
examples/gl_heightfield/: heightfield.cpp  heightfield.frag
examples/gl_multitexturing/: multitexturing.cpp
examples/gl_normalmap/: CMakeLists.txt  flatshade.vert  normal_mapping.vert  normalmap.cpp
examples/gl_obb_estimate/: obb_estimate.cpp
examples/gl_parametric_curve/: CMakeLists.txt  parametric.cpp
examples/gl_parametric_surface/: parametric_surface.cpp
examples/gl_parametric_volume/: CMakeLists.txt  parametric_volume.cpp
examples/gl_shaderstoragebuffer/: example_ssbo.cpp
examples/gl_simple/: CMakeLists.txt  simple.cpp
examples/gl_texturearray/: texturearray.cpp
examples/gl_timer_query/: timer_query.cpp
examples/gl_transformfeedback/: CMakeLists.txt  transformfeedback.cpp
examples/gl_uniformbuffer/: CMakeLists.txt  uniformbuffer.cpp
examples/gl_vertexarrayobject/: CMakeLists.txt  vertexarrayobject.cpp
examples/hello_world_glfw/: CMakeLists.txt  hello_world_glfw.cpp
examples/hello_world_glut/: CMakeLists.txt  hello_world_glut.cpp
examples/hello_world_qt5/: CMakeLists.txt  CMakeLists.txt~
examples/hello_world_qt5/src/: helloqt5.cpp
examples/igs_render_test/: CMakeLists.txt  main.cpp
examples/igs_trimcurve_viewer/: CMakeLists.txt
examples/igs_trimcurve_viewer/include/: glwidget.hpp  mainwindow.hpp  slidergroup.hpp
examples/igs_trimcurve_viewer/shader/: contour.frag.glsl  contour_binary.frag  contour_binary.frag.glsl  contour_binary.vert  contour_binary_costs.frag  contour_kd.frag  contour_kd.vert  contour_loop_list.frag  domain.vert.glsl  double_binary.frag  double_binary.frag.glsl  double_binary.vert  double_binary_costs.frag  partition.frag.glsl  partition.vert.glsl  prefilter_view.frag.glsl  texture_view.frag.glsl  texture_view.vert.glsl
examples/igs_trimcurve_viewer/src/: glwidget.cpp  mainwindow.cpp  slidergroup.cpp  trimview.cpp
examples/igs_viewer_glfw/: CMakeLists.txt  main.cpp
examples/igs_viewer_glfw/data/: part.igs
examples/igs_viewer_glfw/src/: main.cpp
examples/igs_viewer_glut/: CMakeLists.txt  main.cpp
examples/igs_viewer_glut/data/: part.igs
examples/igs_viewer_glut/include/: application.hpp  displaysetup.hpp  filereader.hpp  glwidget.hpp
examples/igs_viewer_glut/src/: application.cpp  displaysetup.cpp  filereader.cpp  igs_viewer_glut.cpp
examples/igs_viewer_qt/: CMakeLists.txt
examples/igs_viewer_qt/include/: application.hpp  glwidget.hpp  mainwindow.hpp  slidergroup.hpp
examples/igs_viewer_qt/src/: application.cpp  glwidget.cpp  igs_viewer_qt.cpp  mainwindow.cpp  slidergroup.cpp
examples/timer_query/: timer_query.cpp
examples/vertexarrayobject/: CMakeLists.txt  vertexarrayobject.cpp
examples/volume_converter/: CMakeLists.txt  volume_converter.cpp
examples/volume_view/: CMakeLists.txt
examples/volume_view/include/: glwidget.hpp  mainwindow.hpp
examples/volume_view/src/: glwidget.cpp  mainwindow.cpp  volume_view.cpp
gpucast_core/: CMakeLists.txt
gpucast_core/glsl/base/: base.frag  base.vert  clear_buffer.vert  conversion.frag  copy_depth.frag  faceforward.frag  (+4 more)
gpucast_core/src/: aabb.cpp  beziersurface.cpp  beziersurfaceobject.cpp  convex_hull.cpp  nurbssurface.cpp  nurbssurfaceobject.cpp  renderer.cpp  surface_converter.cpp  surface_renderer.cpp  surface_renderer_gl.cpp  trimdomain.cpp  trimdomain_serializer.cpp  trimdomain_serializer_contour_map_binary.cpp  trimdomain_serializer_contour_map_kd.cpp  trimdomain_serializer_double_binary.cpp  trimdomain_serializer_loop_contour_list.cpp
gpucast_gl/: CMakeLists.txt
gpucast_gl/src/: arraybuffer.cpp  atomicbuffer.cpp  buffer.cpp  cubemap.cpp  elementarraybuffer.cpp  error.cpp  fragmentshader.cpp  framebufferobject.cpp  geometryshader.cpp  program.cpp  query.cpp  renderbuffer.cpp  sampler.cpp  shader.cpp  shaderstoragebuffer.cpp  tessellationcontrolshader.cpp  tessellationevaluationshader.cpp  texture.cpp  texture1d.cpp  texture2d.cpp  texture3d.cpp  texturearray.cpp  texturebuffer.cpp  timer_query.cpp  transformfeedback.cpp  transformfeedback_query.cpp  uniformbuffer.cpp  vertexarrayobject.cpp
gpucast_glut/: CMakeLists.txt
gpucast_math/include/: CMakeLists.txt
gpucast_math/test/: CMakeLists.txt  libnurbstest.cpp  testbezierclipping2d.cpp  testbeziercurve.cpp  testbeziersurface.cpp  testbeziervolume.cpp  testboundingbox.cpp  testconverter.cpp  testcoverage.cpp  testdfdxy.cpp  testgcd.cpp  testglsl.cpp  testinterval_arithmetic.cpp  testmatrix.cpp  testnewton.cpp  testnurbscurve.cpp  testnurbssurface.cpp  testnurbsvolume.cpp  testobb.cpp  testpartition.cpp  testpixel_coverage.cpp  testpixel_discretizer3d.cpp  testpoint.cpp  testpoint2.cpp  testpoint3.cpp  testpointmesh3d.cpp  testpolynom.cpp  testpow.cpp  testrange.cpp  testrectangular_map.cpp
gpucast_volume/: CMakeLists.txt
gpucast_volume/kernel/: cuda_globals.h  cuda_renderconfig.h  cuda_types.h  external_passthrough.cu  get_kernel_workitems.h  local_memory_config.h  opencl_globals.h  opencl_types.h  raycast_fragmentlists.cl  raycast_fragmentlists.cu  raycast_fragmentlists.h  raycast_fragmentlists_for_iso_surface.h  raycast_grid.cu  raycast_grid.h  raycast_octree.cu  raycast_octree.h  sample_fragmentlists.cu  sample_fragmentlists.h  sample_volume.h  splat_volume_samples.cu
gpucast_volume/src/: aabb.cpp  beziervolume.cpp  beziervolumeobject.cpp  nurbsvolume.cpp  nurbsvolumeobject.cpp  obb.cpp  volume_converter.cpp  volume_renderer.cpp  volume_renderer_tesselator.cpp
(+739 files in other folders)
