get_subdirectories(_LIST_OF_EXAMPLES ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH (_EXAMPLE ${_LIST_OF_EXAMPLES})
    SET(EXAMPLE_${_EXAMPLE} true CACHE BOOL "Build module ${_EXAMPLE}")
    MESSAGE(STATUS "Found plugin ${_EXAMPLE}")
ENDFOREACH (_EXAMPLE)

FOREACH (_EXAMPLE ${_LIST_OF_EXAMPLES})
    IF (NOT EXAMPLE_${_EXAMPLE})
        SET(EXAMPLE_${_EXAMPLE} false CACHE BOOL "Build module ${_EXAMPLE}")
    ELSEIF (${EXAMPLE_${_EXAMPLE}})
        add_subdirectory(${_EXAMPLE})
    ENDIF (NOT EXAMPLE_${_EXAMPLE})
ENDFOREACH (_EXAMPLE)
